--- a/chamber/index.html
+++ b/chamber/index.html
@@ -69,6 +69,7 @@
                 src="../images/rexburg.jpg"
                 alt="Rexburg"/>
             </div>
+
             <div class="event">
               <h1 id="event-rex">MONSTERS OF DESTRUCTION</h1>
               <p id="event-info">
@@ -82,15 +83,18 @@
                 More info on: https://monstersofdestruction.com/rexburg-id/ <br>
               </p>
             </div>
+
             <div class="weather">
                 Weather
             </div>
+
             <div class="join">
                 <h1 id="join">Join us!</h1>
                 <p id="join-info">
                   Discover how to join the chamber of commerce and how it will benifit your organization!
                 </p>
             </div>
+
             <article class="news-release">
               <h1 id="news">News Release</h1>
                 <p id="news-info">Investigation underway after dead body found west of Rexburg.
@@ -101,6 +105,7 @@
                 https://www.eastidahonews.com/2022/05/investigation-underway-after-dead-body-found-west-of-rexburg/ 
                 </p>
             </article>
+
             <div class="spotlight">
                 <section class="spot">
                     <h1 id="spot-one">Salt Lake Express</h1>
@@ -113,19 +118,20 @@
                       <br>
                       (208)-656-8824 ~ Salt Lake Express
                       </p>
-
                 </section>
+
                 <section class="spot">
-                    Spotlight 2 Bear World
-                    website and phone number info
-                    add border top?
-
-                    Drive-Thru Wildlife Park!
-
-                    (208) 359-9688
-                    https://yellowstonebearworld.com/
-
+                  <h1 id="spot-two">Bear World</h1>
+                  <p id="spot-two-info">
+                    <img id="bear-pic" src="../images/bear.jpg"
+                    alt="Bear"/>
+                    Drive-Thru Wildlife Park! <br>
+                    <br>
+                    https://yellowstonebearworld.com/ <br>
+                    (208)-359-9688
+                  </p>
                 </section>
+
                 <section class="spot" id="spot3">
                     Spotlight 3 Flight Museum
                     website and phone number join-info
