--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,6 +86,8 @@
 
             <div class="weather">
                 Weather
+                Wind Speed: 2.5 km/h
+                Wind Chill: N/A
             </div>
 
             <div class="join">
@@ -121,27 +123,25 @@
                 </section>
 
                 <section class="spot">
-                  <h1 id="spot-two">Bear World</h1>
+                  <h1 id="spot-two">Yellowstone Bear World</h1>
                   <p id="spot-two-info">
                     <img id="bear-pic" src="../images/bear.jpg"
                     alt="Bear"/>
                     Drive-Thru Wildlife Park! <br>
                     <br>
                     https://yellowstonebearworld.com/ <br>
-                    (208)-359-9688
+                    (208)-359-9688 ~ Bear World
                   </p>
                 </section>
 
                 <section class="spot" id="spot3">
-                    Spotlight 3 Flight Museum
-                    website and phone number join-info
-                    add border top?
-
-                    Large aviation hangar showcasing a collection of old-school military & civilian aircraft.
-
-                    (208) 359-5905
-                    https://legacy-flight-museum.edan.io/
-
+                  <h1 id="spot-three">Legacy Flight Museum</h1>
+                  <p id="spot-three-info">
+                    Large aviation hanger showcasing a collection of old-school military & civilian aircrafts.<br>
+                    <br>
+                    https://legacy-flight-museum.edan.io/ <br>
+                    (208)-359-5905 ~ Flight Museum
+                  </p>
                 </section>
             </div>
           </main>
