--- a/chamber/index.html
+++ b/chamber/index.html
@@ -85,7 +85,7 @@
             </div>
 
             <div class="weather">
-                Weather
+              <h1 id="weather">Weather</h1>
                 Wind Speed: 2.5 km/h
                 Wind Chill: N/A
             </div>
@@ -137,6 +137,8 @@
                 <section class="spot" id="spot3">
                   <h1 id="spot-three">Legacy Flight Museum</h1>
                   <p id="spot-three-info">
+                    <img id="airplane" src="../images/airplane.jpg"
+                    alt="Airplane"/>
                     Large aviation hanger showcasing a collection of old-school military & civilian aircrafts.<br>
                     <br>
                     https://legacy-flight-museum.edan.io/ <br>
