--- a/chamber/index.html
+++ b/chamber/index.html
@@ -86,8 +86,10 @@
 
             <div class="weather">
               <h1 id="weather">Weather</h1>
-                Wind Speed: 2.5 km/h
+              <p id="weather-info">
+                Wind Speed: 2.5 km/h<br>
                 Wind Chill: N/A
+              </p>
             </div>
 
             <div class="join">
