--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,8 +66,15 @@
             <div class="hero">
                 <h3 class="hero-header">Welcome to Madison County, Rexburg</h3>
                 <img id="rexburg-pic"
-                src="../images/rexburg.jpg"
-                alt="Rexburg"/>
+                src="../images/wdd230-org.jpg"
+                alt="WDD230-0rg"
+                srcset="../images/wdd230-org.jpg 120w, 
+                        ../images/wdd230-org.jpg 193w, 
+                        ../images/wdd230-org.jpg 278w"
+                        
+                sizes="(max-width: 710px) 120px,
+                      (max-width: 991px) 193px,
+                      278px"/>
             </div>
 
             <div class="event">
