--- a/chamber/index.html
+++ b/chamber/index.html
@@ -94,8 +94,10 @@
             <div class="weather">
               <h1 id="weather">Weather</h1>
               <p id="weather-info">
+                High: 57&deg;<br>
+                Low: 37&deg;<br>
                 Wind Speed: 2.5 km/h<br>
-                Wind Chill: N/A
+                Wind Chill: <span id="windChill"></span>&deg;
               </p>
             </div>
 
