--- a/chamber/index.html
+++ b/chamber/index.html
@@ -87,7 +87,7 @@
                 ~ FREE Pit Party starts 2 hours prior<br>
                 ~ Parking is free<br>
                 <br>
-                More info on: https://monstersofdestruction.com/rexburg-id/ <br>
+                More info on: <a href="url">https://monstersofdestruction.com/rexburg-id/</a><br>
               </p>
             </div>
 
@@ -95,7 +95,6 @@
               <h1 id="weather">Weather</h1>
               <p id="weather-info">
                 High: 57&deg;<br>
-                Low: 37&deg;<br>
                 Wind Speed: 2.5 km/h<br>
                 Wind Chill: <span id="windChill"></span>&deg;
               </p>
@@ -169,5 +168,6 @@
             </footer>
             <script src="js/main.js"></script>
             <script src="js/hamburger.js"></script>
+            <script src="js/windchill.js"></script>
       </body>
     </html>
