--- a/chamber/index.html
+++ b/chamber/index.html
@@ -94,15 +94,18 @@
             <div class="weather">
               <h1 id="weather">Weather</h1>
               <p id="weather-info">
+                <img id="weather-pic"
+                src="../images/weather.jpg"
+                alt="Weather"/>
                 <form id="wind">
                 <label for="Temp">Average Temperature:
                   <input id="Temp" type="number" name="Temp">
-                </label>
+                </label><br>
                 <label for="windSpeed">Wind Speed:
                   <input id="windSpeed" type="number" name="windSpeed">
-                </label>
-                <input id="button" type="button">Submit</input>
-                </form>
+                </label><br>
+                <input id="button" type="button" value="Submit"></input>
+                </form><br>
                 Wind Chill: <span id="windChill"></span>&deg;
               </p>
             </div>
