--- a/chamber/index.html
+++ b/chamber/index.html
@@ -117,7 +117,7 @@
                 It was located around 9 a.m. Friday morning in the Cartier Slough Wildlife Management Area of the Snake River west of Rexburg, 
                 according to a news release from the Madison County Sheriff’s Office.
                 <br>
-                https://www.eastidahonews.com/2022/05/investigation-underway-after-dead-body-found-west-of-rexburg/ 
+                <a href="url">https://www.eastidahonews.com/2022/05/investigation-underway-after-dead-body-found-west-of-rexburg/</a>
                 </p>
             </article>
 
@@ -129,7 +129,7 @@
                       alt="Salt Lake Express"/>
                       Plan your trip now and enjoy the ride! <br>
                       <br>
-                      https://saltlakeexpress.com/destination/rexburg-byu-idaho-id/
+                      <a href="url">https://saltlakeexpress.com/destination/rexburg-byu-idaho-id/</a>
                       <br>
                       (208)-656-8824 ~ Salt Lake Express
                       </p>
@@ -142,7 +142,7 @@
                     alt="Bear"/>
                     Drive-Thru Wildlife Park! <br>
                     <br>
-                    https://yellowstonebearworld.com/ <br>
+                    <a href="url">https://yellowstonebearworld.com/</a><br>
                     (208)-359-9688 ~ Bear World
                   </p>
                 </section>
@@ -154,7 +154,7 @@
                     alt="Airplane"/>
                     Large aviation hanger showcasing a collection of old-school military & civilian aircrafts.<br>
                     <br>
-                    https://legacy-flight-museum.edan.io/ <br>
+                    <a href="url">https://legacy-flight-museum.edan.io/</a><br>
                     (208)-359-5905 ~ Flight Museum
                   </p>
                 </section>
