--- a/index.html
+++ b/index.html
@@ -17,7 +17,6 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="shortcut icon" href="./favicon.ico">
 
-        <script src="js/script.js" defer></script>
     </head>
     <body>
         <header>
@@ -50,7 +49,7 @@
         </main>
         <footer>
             <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-            <script src="./main-page.js"></script>
+            <script src="main-page.js"></script>
           </footer>
     </body>
 </html>
