--- a/lesson02/design-principles.html
+++ b/lesson02/design-principles.html
@@ -14,7 +14,7 @@
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
-        <link rel="stylesheet" href="normalize.css">
+        <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="index.html">
 
         <script src="js/script.js" defer></script>
