--- a/lesson3/index.html
+++ b/lesson3/index.html
@@ -7,7 +7,7 @@
         
         <title>WDD230 Assignment Portal</title>
 
-        <link rel="stylesheet" type="text/css" href="./style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -15,7 +15,6 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="css/normalize.css">
 
-        <script src="js/script.js" defer></script>
     </head>
 
     <body>
@@ -62,7 +61,7 @@
         </main>
         <footer>
           <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-          <script src="./page.js"></script>
+          <script src="js/page.js"></script>
         </footer>
         
       </body>
