--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -7,7 +7,7 @@
         
         <title>WDD230 Assignment Portal</title>
 
-        <link rel="stylesheet" type="text/css" href="./style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Charm&family=Raleway:wght@200&display=swap" rel="stylesheet">
@@ -15,7 +15,7 @@
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link rel="stylesheet" href="css/normalize.css">
 
-        <script src="js/script.js" defer></script>
+        <script src="js/page.js" defer></script>
     </head>
 
     <body>
