--- a/lesson3/typography.html
+++ b/lesson3/typography.html
@@ -42,8 +42,8 @@
             
             <h2>Font Choices</h2>
 
-            <p>I am choosing the <strong>Charm, cursive</strong> ,font for the heading of the page/s. I came across this heading and with the right spacing and size, is really pretty and pretty easy to read.</p>
-            <p>I am choosing the <strong>Raleway, sans-serif</strong> ,font for the paragraphs and any other words on the page. I think this one is a really great plain font for paragraphs.</p>
+            <p>I am choosing the <strong>Charm, cursive</strong> ,font for the heading and h1(and so on) tags of the page/s. I came across this heading and with the right spacing and size, is really pretty and pretty easy to read.</p>
+            <p>I am choosing the <strong>Raleway, sans-serif</strong> ,font for the paragraphs (p) and any other words on the page. I think this one is a really great plain font for paragraphs.</p>
 
         </main>
 
