--- a/lesson2/design-principles.html
+++ b/lesson2/design-principles.html
@@ -7,7 +7,7 @@
         
         <title>WDD230 Assignment Portal</title>
 
-        <link rel="stylesheet" type="text/css" href="./style.css" />
+        <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
         <link href="https://fonts.googleapis.com/css2?family=Josefin+Sans&display=swap" rel="stylesheet">
@@ -17,7 +17,6 @@
         <link rel="stylesheet" href="css/normalize.css">
         <link rel="stylesheet" href="index.html">
 
-        <script src="js/script.js" defer></script>
     </head>
 
     <body>
@@ -61,7 +60,7 @@
         </main>
         <footer>
           <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-          <script src="./date.js"></script>
+          <script src="js/date.js"></script>
         </footer>
       </body>
       </html>
