--- a/lesson7/discover.html
+++ b/lesson7/discover.html
@@ -69,7 +69,7 @@
 
 
 
-            
+
           </main>
 
           <footer>
@@ -81,7 +81,7 @@
             </div>
               </footer>
               <script src="js/main.js"></script>
-              <script src="js/hamburger.js"></script>
-              <script src="js/windchill.js"></script>
+              <script src="../chamber/js/hamburger.js"></script>
+              <script src="js/lazy.js"></script>
         </body>
       </html>
