--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -1,3 +1,38 @@
-<head>
-    
-</head>
+<!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Assignment portal for Mariah Wedel in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+        <title>Lazy Load</title>
+    </head>
+    <body>
+        <main>
+            <h1>
+                Rexburg, Idaho LDS Temple
+            </h1>
+            <img data-src="rexTemple.jpg" alt="Rexburg Temple" width="300" height="auto">
+            <h1>
+                Farmland
+            </h1>
+            <img data-src="farm.jpg" alt="Farmland" width="400" height="auto">
+            <h1>
+                Brighham Young University Idaho
+            </h1>
+            <img data-src="school.jpg" alt="BYU-School" width="400" height="auto">
+            <h1>
+                Rexburg Water Tower
+            </h1>
+            <img data-src="waterTower.jpg" alt="Water Tower" width="400" height="auto">
+            <h1>
+                Rexburg Tabernacle
+            </h1>
+            <img data-src="rexTab.jpg" alt="Rexburg Tabernacle" width="300" height="auto">
+            <h1>
+                Rexburg City Courthouse
+            </h1>
+            <img data-src="cityHall" alt="Courthouse" width="400" height="auto">
+        </main>
+        <script src="js/lazy.js"></script>
+    </body>
+</html>
