--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                     <li>Lesson 05: <a href="chamber/index.html">Chamber Home Page Continued</a></li>
                     <li>Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
                     <li>Lesson 06: <a href="week6.html">Responsive Design</a></li>
-                    <li>Lesson 07: <a href="week7.html">The Discover Page - Image Section</a></li>
+                    <li>Lesson 07: <a href="lazyload.html">The Discover Page - Image Section</a></li>
                     <li>Lesson 08: <a href="week8.html">Join Page</a></li>
                     <li>Lesson 09: <a href="week9.html">The Business Directory Page</a></li>
                     <li>Lesson 10: <a href="week10.html">Using the Weather API</a></li>
