--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -5,6 +5,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <meta name="description" content="Assignment portal for Mariah Wedel in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
         <title>Lazy Load</title>
+        <link rel="stylesheet" href="css/lazy.css" />
     </head>
     <body>
         <main>
