--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -65,8 +65,47 @@
           <main>
 
 
+            <!DOCTYPE html>
+<html lang="en">
+    <head>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <meta name="description" content="Assignment portal for Mariah Wedel in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+        <title>Lazy Load</title>
+        <link rel="stylesheet" href="css/lazy.css" />
+    </head>
 
 
+    
+    <body>
+        <main class="home-grid">
+            <h1 id="rexTempleHeading">
+                Rexburg, Idaho LDS Temple
+            </h1>
+            <img id="rexTemple" data-src="rexTemple.jpg" alt="Rexburg Temple" width="300" height="auto">
+            <h1 id="farmHeading">
+                Farmland
+            </h1>
+            <img id="farm" data-src="farm.jpg" alt="Farmland" width="400" height="auto">
+            <h1 id="schoolHeading">
+                Brighham Young University Idaho
+            </h1>
+            <img id="school" data-src="school.jpg" alt="BYU-School" width="400" height="auto">
+            <h1 id="waterTowerHeading">
+                Rexburg Water Tower
+            </h1>
+            <img id="waterTower" data-src="waterTower.jpg" alt="Water Tower" width="400" height="auto">
+            <h1 id="rexTabHeading">
+                Rexburg Tabernacle
+            </h1>
+            <img id="rexTab" data-src="rexTab.jpg" alt="Rexburg Tabernacle" width="300" height="auto">
+            <h1 id="cityHallHeading">
+                Rexburg City Courthouse
+            </h1>
+            <img id="cityHall" data-src="cityHall" alt="Courthouse" width="400" height="auto">
+        </main>
+        <script src="js/lazy.js"></script>
+    </body>
 
 
 
