--- a/index.html
+++ b/index.html
@@ -37,9 +37,9 @@
                     <li>Lesson 04: <a href="chamber/index.html">Chamber Home Page Build</a></li>
                     <li>Lesson 05: <a href="chamber/index.html">Chamber Home Page Continued</a></li>
                     <li>Lesson 05: <a href="bom/bom.html">DOM Manipulation</a></li>
-                    <li>Lesson 06: <a href="week6.html">Responsive Design</a></li>
-                    <li>Lesson 07: <a href="lazyload.html">The Discover Page - Image Section</a></li>
-                    <li>Lesson 08: <a href="week8.html">Join Page</a></li>
+                    <li>Lesson 06: <a href="chamber/index.html">Responsive Design</a></li>
+                    <li>Lesson 07: <a href="lazyload.html">Lazy Loading Activity</a></li>
+                    <li>Lesson 08: <a href="week8.html">Table Build</a></li>
                     <li>Lesson 09: <a href="week9.html">The Business Directory Page</a></li>
                     <li>Lesson 10: <a href="week10.html">Using the Weather API</a></li>
                     <li>Lesson 11: <a href="week11.html">The Temple Inn & Suites</a></li>
