--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -12,26 +12,26 @@
 </head>
 <body>
     <header>
-        <h1 class="heading">Progressive Loading Images</h1>
+        <h1>Progressive Loading Images</h1>
     </header>
     <main>
         <picture>
-            <img src="images/placeholder.png" data-src="images/image_one.jpg" alt="Image One">
+            <img src="../images/placeholder.png" data-src="../images/image_one.jpg" alt="Image One">
         </picture>
         <picture>
-            <img src="images/placeholder.png" data-src="lesson7/images/image_two.jpg" alt="Image Two">
+            <img src="../images/placeholder.png" data-src="../images/image_two.jpg" alt="Image Two">
         </picture>
         <picture>
-            <img src="images/placeholder.png" data-src="images/image_three.jpg" alt="Image Three">
+            <img src="../images/placeholder.png" data-src="../images/image_three.jpg" alt="Image Three">
         </picture>
         <picture>
-            <img src="images/placeholder.png" data-src="images/image_four.jpg" alt="Image Four">
+            <img src="../images/placeholder.png" data-src="../images/imagefour.jpg" alt="Image Four">
         </picture>
         <picture>
-            <img src="images/placeholder.png" data-src="images/image_five.jpg" alt="Image Five">
+            <img src="../images/placeholder.png" data-src="../images/imagefive.jpg" alt="Image Five">
         </picture>
         <picture>
-            <img src="images/placeholder.png" data-src="images/image_six.jpg" alt="Image Six">
+            <img src="../images/placeholder.png" data-src="../images/image_six.jpg" alt="Image Six">
         </picture>
     </main>
     <footer>
