--- a/lesson7/lazyload.html
+++ b/lesson7/lazyload.html
@@ -16,13 +16,13 @@
     </header>
     <main>
         <picture>
-            <img src="../images/placeholder.png" data-src="../images/image_one.jpg" alt="Image One">
+            <img src="../images/placeholder.png" data-src="../images/imageone.jpg" alt="Image One">
         </picture>
         <picture>
-            <img src="../images/placeholder.png" data-src="../images/image_two.jpg" alt="Image Two">
+            <img src="../images/placeholder.png" data-src="../images/imagetwo.jpg" alt="Image Two">
         </picture>
         <picture>
-            <img src="../images/placeholder.png" data-src="../images/image_three.jpg" alt="Image Three">
+            <img src="../images/placeholder.png" data-src="../images/imagethree.jpg" alt="Image Three">
         </picture>
         <picture>
             <img src="../images/placeholder.png" data-src="../images/imagefour.jpg" alt="Image Four">
@@ -31,7 +31,7 @@
             <img src="../images/placeholder.png" data-src="../images/imagefive.jpg" alt="Image Five">
         </picture>
         <picture>
-            <img src="../images/placeholder.png" data-src="../images/image_six.jpg" alt="Image Six">
+            <img src="../images/placeholder.png" data-src="../images/imagesix.jpg" alt="Image Six">
         </picture>
     </main>
     <footer>
