--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         </main>
         <footer>
             <p> &copy; <span id = "year"></span><span id="lastUpdate"></span></p>
-            <script src="main-page.js"></script>
           </footer>
+          <script src="js/main-page.js"></script>
     </body>
 </html>
