--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -4,8 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Lesson 8 for Nikkolet Ashby in WDD 230: Web Frontend Development at Brigham Young University - Idaho">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Assignment portal for Mariah Wedel in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
     <title>Table Build</title>
     <link href="css/normalize.css" rel="stylesheet">
     <!-- phone-default -->
@@ -56,7 +56,7 @@
                 <td class="data" id="currentGoal">7,500</td>
             </tr>
             <tr>
-                <td class="data">Black Friday</td>
+                <td class="special">Black Friday</td>
                 <td class="data" colspan="2">$3,200</td>
             </tr>
             <tr>
