--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -36,33 +36,33 @@
         </thead>
         <tbody>
             <tr>
-                <td class="data">August</td>
-                <td class="data">$3,590</td>
-                <td class="data">$4,000</td>
+                <td class="info">August</td>
+                <td class="info">$3,590</td>
+                <td class="info">$4,000</td>
             </tr>
             <tr>
-                <td class="data">September</td>
-                <td class="data">$4,420</td>
-                <td class="data">$5,000</td>
+                <td class="info">September</td>
+                <td class="info">$4,420</td>
+                <td class="info">$5,000</td>
             </tr>
             <tr>
-                <td class="data">October</td>
-                <td class="data">$4,870</td>
-                <td class="data">$5,000</td>
+                <td class="info">October</td>
+                <td class="info">$4,870</td>
+                <td class="info">$5,000</td>
             </tr>
             <tr>
-                <td class="data">November</td>
-                <td class="data">$8,610</td>
-                <td class="data" id="currentGoal">7,500</td>
+                <td class="info">November</td>
+                <td class="info">$8,610</td>
+                <td class="info" id="currentGoal">7,500</td>
             </tr>
             <tr>
                 <td class="special">Black Friday</td>
-                <td class="data" colspan="2">$3,200</td>
+                <td class="info" colspan="2">$3,200</td>
             </tr>
             <tr>
-                <td class="data">December</td>
-                <td class="data">$6,820</td>
-                <td class="data">$7,500</td>
+                <td class="info">December</td>
+                <td class="info">$6,820</td>
+                <td class="info">$7,500</td>
             </tr>
         </tbody>
         <tfoot>
