--- a/lesson8/tablebuild.html
+++ b/lesson8/tablebuild.html
@@ -6,13 +6,12 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="description" content="Assignment portal for Mariah Wedel in WDD 230: Web Frontend Development at Brigham Young University - Idaho" />
+    
     <title>Table Build</title>
+    
     <link href="css/normalize.css" rel="stylesheet">
-    <!-- phone-default -->
     <link href="css/small.css" rel="stylesheet">
-    <!-- enhance-tablet -->
     <link href="css/medium.css" rel="stylesheet">
-    <!-- enhance-desktop -->
     <link href="css/large.css" rel="stylesheet">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -20,7 +19,7 @@
 </head>
 
 <body>
-    <h1>Table Build</h1>
+    <h1>Table Build Activity</h1>
 
     <table>
         <thead>
@@ -36,33 +35,33 @@
         </thead>
         <tbody>
             <tr>
-                <td class="info">August</td>
-                <td class="info">$3,590</td>
-                <td class="info">$4,000</td>
+                <td>August</td>
+                <td>$3,590</td>
+                <td>$4,000</td>
             </tr>
             <tr>
-                <td class="info">September</td>
-                <td class="info">$4,420</td>
-                <td class="info">$5,000</td>
+                <td>September</td>
+                <td>$4,420</td>
+                <td>$5,000</td>
             </tr>
             <tr>
-                <td class="info">October</td>
-                <td class="info">$4,870</td>
-                <td class="info">$5,000</td>
+                <td>October</td>
+                <td>$4,870</td>
+                <td>$5,000</td>
             </tr>
             <tr>
-                <td class="info">November</td>
-                <td class="info">$8,610</td>
-                <td class="info" id="currentGoal">7,500</td>
+                <td>November</td>
+                <td>$8,610</td>
+                <td id="currentGoal">7,500</td>
             </tr>
             <tr>
                 <td class="special">Black Friday</td>
-                <td class="info" colspan="2">$3,200</td>
+                <td colspan="2">$3,200</td>
             </tr>
             <tr>
-                <td class="info">December</td>
-                <td class="info">$6,820</td>
-                <td class="info">$7,500</td>
+                <td>December</td>
+                <td>$6,820</td>
+                <td>$7,500</td>
             </tr>
         </tbody>
         <tfoot>
