--- a/chamber/join.html
+++ b/chamber/join.html
@@ -63,17 +63,26 @@
         </header>
 
 
-
-
-
-
-
-
-
-
-
-
-
+        <main id="join-main">
+            <h1 id="join-greeting">📧 Join Today!</h1>
+            <form id="join-box" action="" method="get">
+                <label for="fname">First name:</label>
+                <input type="text" id="fname" name="fname" />
+                <label for="lname">Last name:</label>
+                <input type="text" id="lname" name="lname" required />
+                <label for="btitle">Business title:</label>
+                <input type="text" id="btitle" name="btitle" required />
+                <label for="email">Email address:</label>
+                <input type="text" id="email" name="email" required />
+                <label for="phone">Phone number:</label>
+                <input type="phone" id="phone" name="phone" />
+                <label for="memlev">Membership level:</label>
+                <input type="text" id="memlev" name="memlev" />
+                <label for="busdes">Business description:</label>
+                <textarea id="busdes" name="busdes" required></textarea>
+                <button id="btnSubmit" type="submit">Submit Information</button>
+            </form>
+        </main>
 
 
         <footer>
