--- a/chamber/join.html
+++ b/chamber/join.html
@@ -27,9 +27,9 @@
           <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li class="active"><a href="index.html"><b>Home</b></a></li>
-                <li><a href=".html"><b>Discover</b></a></li>
+                <li><a href="discover.html"><b>Discover</b></a></li>
                 <li><a href=".html"><b>Directory</b></a></li>
-                <li><a href=".html"><b>Join/Contact</b></a></li>
+                <li><a href="join.html"><b>Join/Contact</b></a></li>
             </ul>
     
            <form>
