--- a/chamber/index.html
+++ b/chamber/index.html
@@ -32,7 +32,7 @@
                 <li><a href="join.html"><b>Join/Contact</b></a></li>
               </ul>
     
-           <form>
+           <form id="search">
              <input type="search" name="q" placeholder="Search">
              <input type="submit" value="Go!">
            </form>
@@ -62,7 +62,7 @@
               <b><section id="banner"></section></b>
           </header>
 
-          <main>
+          <main id="main">
             <div class="hero">
                 <h3 class="hero-header">Welcome to Madison County, Rexburg</h3>
                 <img id="rexburg-pic"
