--- a/chamber/index.html
+++ b/chamber/index.html
@@ -29,7 +29,7 @@
                 <li class="active"><a href="index.html"><b>Home</b></a></li>
                 <li><a href="discover.html"><b>Discover</b></a></li>
                 <li><a href=".html"><b>Directory</b></a></li>
-                <li><a href="join.html"><b>Join/Contact</b></a></li>
+                <li><a href="join.html"><b>Join</b></a></li>
               </ul>
     
            <form id="search">
