--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
                     <li>Lesson 06: <a href="chamber/index.html">Responsive Design</a></li>
                     <li>Lesson 07: <a href="./lesson7/lazyload.html">Lazy Loading Activity</a></li>
                     <li>Lesson 08: <a href="./lesson8/tablebuild.html">Table Build</a></li>
-                    <li>Lesson 09: <a href="week9.html">The Business Directory Page</a></li>
+                    <li>Lesson 09: <a href="./lesson9/prophets.html">Latter-Day Prophets Cards</a></li>
                     <li>Lesson 10: <a href="week10.html">Using the Weather API</a></li>
                     <li>Lesson 11: <a href="week11.html">The Temple Inn & Suites</a></li>
                 </ul>
