--- a/lesson9/prophets.html
+++ b/lesson9/prophets.html
@@ -20,14 +20,13 @@
 </header>
 
 <main>
-    <div class="cards"></div>
+    <div class="cards grid"></div>
 </main>
-
+<script src="js/prophets.js"></script>
 <footer>
     <div class="down-footer">
         <p>Mariah Wedel | BYU-Idaho | WDD230</p>
     </div>
       </footer>
-      <script src="js/prophets.js"></script>
 </body>
 </html>
