--- a/chamber/index.html
+++ b/chamber/index.html
@@ -66,7 +66,7 @@
             <div class="hero">
                 <h3 class="hero-header">Welcome to Madison County, Rexburg</h3>
                 <img id="rexburg-pic"
-                src="../images/wdd230-org.jpg"
+                src="../images/rexburg.jpg"
                 alt="WDD230-0rg"/>
             </div>
 
