--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -22,19 +22,17 @@
     </head>
 
     <body>
-    
         <nav>
           <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
             <ul id="primaryNav">
                 <li><a href="index.html"><b>Home</b></a></li>
                 <li><a href="discover.html"><b>Discover</b></a></li>
-                <li><a href="directory.html"><b>Directory</b></a></li>
-                <li class="active"><a href="join.html"><b>Join</b></a></li>
+                <li class="active"><a href="directory.html"><b>Directory</b></a></li>
+                <li><a href="join.html"><b>Join</b></a></li>
             </ul>
-    
            <form id="search">
-             <input type="search" name="q" placeholder="Search">
-             <input type="submit" value="Go!">
+                <input type="search" name="q" placeholder="Search">
+                <input type="submit" value="Go!">
            </form>
         </nav>
 
@@ -48,50 +46,21 @@
                 ><img class="socialmedia"
                   src="../images/facebook.jpg"
                   alt="Facebook"
-              /></a>
+                /></a>
               <a href="https://www.youtube.com/" target="_blank"
                 ><img class="socialmedia"
                   src="../images/youtube.jpg"
                   alt="Youtube"
-              /></a>
-              </div>
-              <div class="current-date">
+                /></a>
+            </div>
+            <div class="current-date">
                 <b><span id="date"></span></b>
-              </div>
+            </div>
 
-              <b><section id="banner"></section></b>
+            <b><section id="banner"></section></b>
         </header>
 
 
-        <main id="join-main">
-            <h1 id="join-greeting">📧 Join Today!</h1>
-            <form id="join-box" action="" method="get">
-              <fieldset>
-                <legend>Personal:</legend>
-                <label for="fname">First name:
-                  <input type="text" id="fname" name="fname" /></label>
-                <label for="lname">Last name:
-                  <input type="text" id="lname" name="lname" required /></label>
-                <label for="email">Email address:
-                  <input type="text" id="email" name="email" required /></label>
-                <label for="phone">Phone number:
-                  <input type="phone" id="phone" name="phone" /></label>
-              </fieldset>
-              <fieldset>
-                <legend>Business:</legend>
-                <label for="btitle">Business title:
-                  <input type="text" id="btitle" name="btitle" required /></label>
-                <label for="busdes">Business description:
-                  <textarea id="busdes" name="busdes" required></textarea></label>
-              </fieldset>
-              <fieldset>
-                <legend>Membership:</legend>
-                <label for="memlev">Membership level:
-                  <input type="text" id="memlev" name="memlev" /></label>
-              </fieldset>
-                <button id="btnSubmit" type="submit">Submit Information</button>
-            </form>
-        </main>
 
 
         <footer>
