--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -26,7 +26,7 @@
           <ul id="primaryNav">
               <li><a href="index.html"><b>Home</b></a></li>
               <li class="active"><a href="discover.html"><b>Discover</b></a></li>
-              <li><a href=".html"><b>Directory</b></a></li>
+              <li><a href="directory.html"><b>Directory</b></a></li>
               <li><a href="join.html"><b>Join</b></a></li>
             </ul>
     
