--- a/chamber/index.html
+++ b/chamber/index.html
@@ -28,7 +28,7 @@
             <ul id="primaryNav">
                 <li class="active"><a href="index.html"><b>Home</b></a></li>
                 <li><a href="discover.html"><b>Discover</b></a></li>
-                <li><a href=".html"><b>Directory</b></a></li>
+                <li><a href="directory.html"><b>Directory</b></a></li>
                 <li><a href="join.html"><b>Join</b></a></li>
               </ul>
     
