--- a/chamber/directory.html
+++ b/chamber/directory.html
@@ -60,7 +60,7 @@
             <b><section id="banner"></section></b>
         </header>
 
-        
+
         <main class="directory-main">
             <div class="menu">
                 <button id="grid-view">Grid</button>
@@ -68,7 +68,7 @@
             </div>
             <hr>
             <article class="directory-grid">
-                <!--Here is the directory for the Businesses in Rexburg-->
+                <!--Here is the directory and grid for the Businesses in Rexburg-->
             </article>
         </main>
 
