--- a/index.html
+++ b/index.html
@@ -21,14 +21,10 @@
     <body>
         <header>
             <img src="./images/IMG_9580.jpg" alt="Picture of Mariah Wedel" width="200">
-
             <h1>Mariah Wedel</h1>
-
         </header>
         <main>
-
             <h2>WDD230 Assignment Portal</h2>
-
             <hr>
             <div>
                 <ul>
@@ -41,6 +37,7 @@
                     <li>Lesson 07: <a href="./lesson7/lazyload.html">Lazy Loading Activity</a></li>
                     <li>Lesson 08: <a href="./lesson8/tablebuild.html">Table Build</a></li>
                     <li>Lesson 09: <a href="./lesson9/prophets.html">Latter-Day Prophets Cards</a></li>
+                    <li>Lesson 09: <a href="chamber/wireframe.html">Directory Page Wireframe</a></li>
                     <li>Lesson 10: <a href="week10.html">Using the Weather API</a></li>
                     <li>Lesson 11: <a href="week11.html">The Temple Inn & Suites</a></li>
                 </ul>
