--- a/chamber/wireframe.html
+++ b/chamber/wireframe.html
@@ -22,39 +22,11 @@
     </head>
 
     <body>
-    
-        <nav>
-          <button id="hamburgerBtn"><span>&#9776;</span><span>X</span></button>
-            <ul id="primaryNav">
-                <li class="active"><a href="index.html"><b>Home</b></a></li>
-                <li><a href="discover.html"><b>Discover</b></a></li>
-                <li><a href="directory.html"><b>Directory</b></a></li>
-                <li><a href="join.html"><b>Join</b></a></li>
-            </ul>
-    
-           <form id="search">
-            <input type="search" name="q" placeholder="Search">
-            <input type="submit" value="Go!">
-           </form>
-        </nav>
-
         <header>
             <img id="logo" src="../images/logo.jpg" alt="website-logo" width="200">
             <h1 class="town">Madison</h1>
             <h1>Chamber of Commerce</h1>
 
-            <div class="social">
-              <a href="https://www.facebook.com/" target="_blank"
-                ><img class="socialmedia"
-                src="../images/facebook.jpg"
-                alt="Facebook"
-              /></a>
-              <a href="https://www.youtube.com/" target="_blank"
-                ><img class="socialmedia"
-                src="../images/youtube.jpg"
-                alt="Youtube"
-              /></a>
-            </div>
             <div class="current-date">
                 <b><span id="date"></span></b>
             </div>
@@ -64,6 +36,7 @@
 
 
         <main class="wireframe">
+            <h1>Directory Page Wireframes</h1>
             <p>Phone View: <a href="url">https://wireframe.cc/Dzmqvm</a></p>
             <br>
             <p>Tablet View: <a href="url">https://wireframe.cc/vWki3P</a></p>
