--- a/chamber/wireframe.html
+++ b/chamber/wireframe.html
@@ -37,11 +37,11 @@
 
         <main class="wireframe">
             <h1>Directory Page Wireframes</h1>
-            <p>Phone View: <a href="url">https://wireframe.cc/Dzmqvm</a></p>
+            <p>Phone View: <a href="https://wireframe.cc/Dzmqvm">Click Here To Open</a></p>
             <br>
-            <p>Tablet View: <a href="url">https://wireframe.cc/vWki3P</a></p>
+            <p>Tablet View: <a href="https://wireframe.cc/vWki3P">Click Here To Open</a></p>
             <br>
-            <p>Desktop View: <a href="url">https://wireframe.cc/sbVbUq</a></p>
+            <p>Desktop View: <a href="https://wireframe.cc/sbVbUq">Click Here To Open</a></p>
         </main>
 
 
