--- a/chamber/discover.html
+++ b/chamber/discover.html
@@ -64,27 +64,27 @@
             <h1 id="rexTempleHeading">
                 Rexburg, Idaho LDS Temple
             </h1>
-            <img id="rexTemple" data-src="rexTemple.jpg" alt="Rexburg Temple" width="300" height="auto">
+            <img id="rexTemple" src="../images/rexTemple.jpg" alt="Rexburg Temple" width="300" height="auto" loading="lazy">
             <h1 id="farmHeading">
                 Farmland
             </h1>
-            <img id="farm" data-src="farm.jpg" alt="Farmland" width="400" height="auto">
+            <img id="farm" src="../images/farm.jpg" alt="Farmland" width="400" height="auto" loading="lazy">
             <h1 id="schoolHeading">
                 Brighham Young University Idaho
             </h1>
-            <img id="school" data-src="school.jpg" alt="BYU-School" width="400" height="auto">
+            <img id="school" src="../images/school.jpg" alt="BYU-School" width="400" height="auto" loading="lazy">
             <h1 id="waterTowerHeading">
                 Rexburg Water Tower
             </h1>
-            <img id="waterTower" data-src="waterTower.jpg" alt="Water Tower" width="400" height="auto">
+            <img id="waterTower" src="../images/waterTower.jpg" alt="Water Tower" width="400" height="auto" loading="lazy">
             <h1 id="rexTabHeading">
                 Rexburg Tabernacle
             </h1>
-            <img id="rexTab" data-src="rexTab.jpg" alt="Rexburg Tabernacle" width="300" height="auto">
+            <img id="rexTab" src="../images/rexTab.jpg" alt="Rexburg Tabernacle" width="300" height="auto" loading="lazy">
             <h1 id="cityHallHeading">
                 Rexburg City Courthouse
             </h1>
-            <img id="cityHall" data-src="cityHall" alt="Courthouse" width="400" height="auto">
+            <img id="cityHall" src="../images/cityHall.jpg" alt="Courthouse" width="400" height="auto" loading="lazy">
         </main>
 
         <footer>
