--- a/chamber/index.html
+++ b/chamber/index.html
@@ -39,9 +39,13 @@
          </nav>
 
          <header>
-            <img id="logo" src="../images/logo.jpg" alt="website-logo" width="200">
-            <h1 class="town">Madison</h1>
-            <h1>Chamber of Commerce</h1>
+          <div id="flex-header">
+            <img id="logo" src="../images/logo.jpg" alt="website-logo" width="150">
+            <div id="title">
+              <h1 class="town">Madison</h1>
+              <h1>Chamber of Commerce</h1>
+            </div>
+          </div>
 
             <div class="social">
               <a href="https://www.facebook.com/" target="_blank"
@@ -65,9 +69,14 @@
           <main id="main">
             <div class="hero">
                 <h3 class="hero-header">Welcome to Madison County, Rexburg</h3>
-                <img id="rexburg-pic"
-                src="../images/rexburg.jpg"
-                alt="WDD230-0rg"/>
+                <picture>
+                  <img id="rexburg-pic"
+                  src="../images/rexburg.jpg"
+                  alt="WDD230-0rg"/>
+                </picture>
+                <!--<source media="(min-width:650px)" srcset="img_pink_flowers.jpg">
+                  <source media="(min-width:465px)" srcset="img_white_flower.jpg">
+                  <img src="img_orange_flowers.jpg" alt="Flowers" style="width:auto;"> -->
             </div>
 
             <div class="event">
@@ -91,8 +100,8 @@
                 src="../images/weather.jpg"
                 alt="Weather"/>
                 <form id="wind">
-                <label for="Temp">Average Temperature:
-                  <input id="Temp" type="number" name="Temp">
+                <label for="temp">Average Temperature:
+                  <input id="temp" type="number" name="temp">
                 </label><br>
                 <label for="windSpeed">Wind Speed:
                   <input id="windSpeed" type="number" name="windSpeed">
