--- a/chamber/weather-api.html
+++ b/chamber/weather-api.html
@@ -38,24 +38,21 @@
     </header>
     <body>
         <h1>OpenWeatherMap.org API Test</h1>
-        <p>The current temperature in Fairbanks, Alaska is <span id="current-temp"></span> &deg;F</p>
+        <p>The current temperature in Fairbanks, Alaska is <span id="temp"></span> &deg;F</p>
         <h2>Current Condition Icon</h2>
         <figure>
-        <img src="" alt="" id="weather-icon" />
+        <img src="" alt="" id="weatherIcon" />
         <figcaption></figcaption>
         </figure>
     </body>
 
     <footer>
-        <div class="down-footer">
-          <b><p id="copyright">&copy;<span id="year"></span> Madison Chamber of Commerce</b></p>
-          <p id="name"><b>Mariah Wedel</b></p>
-          <p id="class-name"><b>WDD 230 Project</b></p>
-          <p id="update"><b>Last Updated: <span id="lastupdate"></span></p></b>
+        <div class="down-footer-api">
+            <b><p id="copyright">
+               &copy;2022 .:|:. Web Lab .:|:. Mariah Wedel .:|:. BYU-Idaho WDD230
+            </b></p>
         </div>
     </footer>
-    <script src="js/main.js"></script>
-    <script src="js/hamburger.js"></script>
-    <script src="js/windchill.js"></script>
+    <script src="js/weather-api.js"></script>
 
 </html>
