--- a/chamber/weather-api.html
+++ b/chamber/weather-api.html
@@ -36,15 +36,19 @@
 
         <b><section id="banner"></section></b>
     </header>
-    <body>
-        <h1>OpenWeatherMap.org API Test</h1>
-        <p>The current temperature in Fairbanks, Alaska is <span id="temp"></span> &deg;F</p>
-        <h2>Current Condition Icon</h2>
-        <figure>
-        <img src="" alt="" id="weatherIcon" />
-        <figcaption></figcaption>
-        </figure>
-    </body>
+
+    <main>
+        <h1>OpenWeatherMap.org API</h1>
+
+        <div id="weather-div">
+            <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
+            <h2>Current Condition Icon</h2>
+            <figure>
+                <img src="" alt="" id="weather-icon" />
+                <figcaption></figcaption>
+            </figure>
+        </div>
+    </main>
 
     <footer>
         <div class="down-footer-api">
