--- a/chamber/weather-api.html
+++ b/chamber/weather-api.html
@@ -41,10 +41,10 @@
         <h1>OpenWeatherMap.org API</h1>
 
         <div id="weather-div">
-            <p>The current temperature in West Valley City, Utah is <span id="current-temp"></span> &deg;F</p>
-            <h2>Current Condition Icon</h2>
+            <p>The current temperature in Rexburg, Idaho is <span id="current-temp"></span> &deg;F</p>
+            <h3>Current Condition Icon</h3>
             <figure>
-                <img src="" alt="" id="weather-icon" />
+                <img src="../images/weather.jpg" alt="Weather Icon" id="weather-icon" />
                 <figcaption></figcaption>
             </figure>
         </div>
